Tambah view welcome, dashboar, unggah-resep

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,6 +7,24 @@ $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
+//Brand Colors
+$primary-color: #AF3E4D;
+$primary-color-v: #903340;
+$secondary-color: #F0C987;
+$secondary-color-v: #DBB77B;
+$background-color: #fcfcfc;
+$surface-color: #ffff;
+$info-color: #adabab;
+
+// $warning-color:
+$success-color: #89BD9E;
+$error-color: #F56960;
+
+$on-primary-color: #ffff;
+$on-secondary-color: #282828;
+$on-background-color: #282828;
+$on-surface-color: #282828;
+
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
@@ -18,3 +36,18 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// material depth shadow
+@mixin depth ($level) {
+    @if $level == 1 {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    } @else if $level == 2 {
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    } @else if $level == 3 {
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    } @else if $level == 4 {
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    } @else if $level == 5 {
+        box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    }
+}
