--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,15 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "main";
+@import "dashboard";
 
 .navbar-laravel {
   background-color: #fff;
