--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,8 @@
 @import "~@yaireo/tagify/dist/tagify.css";
 @import '~quill/dist/quill.bubble.css';
 @import "~croppie/croppie.css";
+@import '~owl.carousel/dist/assets/owl.carousel.min';
+@import '~owl.carousel/dist/assets/owl.theme.default.min';
 
 // style
 @import "main";
