--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -84,6 +84,9 @@ body {
 }
 
 .card-thumbnail {
+  a {
+    text-decoration: none !important;
+  }
   border: 0;
   background-color: transparent !important;
   .card-img-top {
@@ -95,21 +98,29 @@ body {
     p {
       margin: 0;
     }
+    .recipe-title {
+      color: $on-background-color !important;
+    }
     .recipe-author {
-      color: $info-color;
+      color: $info-color !important;
     }
     .recipe-action {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
+      align-items: center;
+      color: $info-color !important;
+      small {
+        color: $info-color !important;
+      }
       .btn {
         padding: 0 12px;
         font-size: 16px;
         .fa {
-          color: $info-color;
+          color: $info-color !important;
         }
         &:hover {
           .fa {
-            color: $on-background-color;
+            color: $on-background-color !important;
           }
         }
       }
